# chat-app

./: .env  docker-compose.yaml
backend/: Cargo.toml  Dockerfile
backend/migrations/2023-04-02-180226_create_tables/: down.sql  up.sql
backend/src/: broadcaster.rs  main.rs
backend/src/db/: mod.rs  models.rs  schema.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  start.js  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/components/: ChatInput.svelte  Connection.svelte  Disconnection.svelte  Input.svelte  Message.svelte  UserInfo.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/scripts/: backend_url.ts  localStorage.ts
frontend/static/: global.css
