[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
actix-redis = "0.12.0"
actix-session = { version = "0.7.2", features = ["redis-rs-session"] }
actix = "0.13.0"
actix-web = "4.0.0"
actix-web-actors = "4.0.0"
actix-web-lab = "0.19.1"
actix-storage-redis = "0.3.0"
actix-rt = "2.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.94"
env_logger = "0.10.0"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0.0"
chrono = { version = "0.4.24", features = ["serde"] }
bytestring = "1.3.0"
actix-cors = "0.6.4"
uuid = { version = "1.3.1", features=["v7", "v4", ] }
